Changed date format. Fixed dark mode activity bug.
The days on each trip are no longer displayed as "Day 1," and are rather displayed in the format "Friday, March 22, 2024."

The bug where activities are invisible in dark mode has been fixed.

--- a/frontend/src/components/ItineraryForm/Activity.css
+++ b/frontend/src/components/ItineraryForm/Activity.css
@@ -1,5 +1,4 @@
 .task {
-    background-color: white;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     width: 100%;
